--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-       PASTA - Polynomial Amortized Size Tracking Analysis
-       ===================================================
+     PASTIS - Polynomial Amortized Size Tracking Inference System
+     ============================================================
 
 - Build Instructions
 
-Pasta comes with its rarely installed dependencies.  To build it
+Pastis comes with its rarely installed dependencies.  To build it
 you will still need to have the following core:
 
   * GMP 4.2 or up (with development headers)
